# c-logging

./: CMakeLists.txt
inc/c_logging/: log_context.h  xlogging.h
v2/: CMakeLists.txt
v2/devdoc/: logging.md
v2/inc/c_logging/: log_context.h  log_property_type.h  log_property_types.h  log_sink.h  log_sink_console.h  log_sink_etw.h  logger.h
v2/src/: log_context.c  log_errno_linux.c  log_property_types.c  log_sink_console.c  log_sink_etw.c  logger.c
v2/tests/: CMakeLists.txt
v2/tests/logger_int/: main.c
v2/tests/logger_perf/: main.c
